--- a/CarbonVisualizer/Base.lproj/Main.storyboard
+++ b/CarbonVisualizer/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kPz-fc-jkc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kQC-t8-k2Y">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="6dn-lU-jk7">
             <objects>
-                <viewController id="kQC-t8-k2Y" customClass="ViewController" customModule="CarbonVisualizer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kQC-t8-k2Y" customClass="ViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hYx-gu-9hy"/>
                         <viewControllerLayoutGuide type="bottom" id="770-eV-Tev"/>
@@ -27,7 +28,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" loops="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6AR-9S-R7o">
+                            <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" loops="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6AR-9S-R7o">
                                 <rect key="frame" x="0.0" y="84" width="600" height="460"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.15000000599999999" green="0.15000000599999999" blue="0.15000000599999999" alpha="1" colorSpace="deviceRGB"/>
@@ -46,6 +47,7 @@
                         <constraints>
                             <constraint firstItem="6AR-9S-R7o" firstAttribute="leading" secondItem="CvP-vF-jX7" secondAttribute="leading" id="6XU-Yf-fNt"/>
                             <constraint firstItem="6AR-9S-R7o" firstAttribute="top" secondItem="ipJ-sd-2Tw" secondAttribute="bottom" constant="8" symbolic="YES" id="CFe-Ha-Ktq"/>
+                            <constraint firstItem="770-eV-Tev" firstAttribute="top" secondItem="6AR-9S-R7o" secondAttribute="bottom" constant="56" id="IXr-ab-xsN"/>
                             <constraint firstItem="ipJ-sd-2Tw" firstAttribute="top" secondItem="hYx-gu-9hy" secondAttribute="bottom" constant="10" id="K9W-1T-Wes"/>
                             <constraint firstItem="ipJ-sd-2Tw" firstAttribute="leading" secondItem="CvP-vF-jX7" secondAttribute="leading" constant="20" symbolic="YES" id="R3M-4W-4tX"/>
                             <constraint firstAttribute="centerX" secondItem="6AR-9S-R7o" secondAttribute="centerX" id="jD4-LS-02o"/>
@@ -65,7 +67,7 @@
         <!--Image View Controller-->
         <scene sceneID="7cY-wt-obZ">
             <objects>
-                <viewController id="kPz-fc-jkc" customClass="ImageViewController" customModule="CarbonVisualizer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController extendedLayoutIncludesOpaqueBars="YES" id="kPz-fc-jkc" customClass="ImageViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Hia-7i-Yem"/>
                         <viewControllerLayoutGuide type="bottom" id="XrO-We-0nO"/>
@@ -74,25 +76,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2MJ-71-2y4">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="2MJ-71-2y4">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="373" id="9MZ-H6-G1d"/>
-                                    <constraint firstAttribute="width" constant="349" id="j5y-TU-RYg"/>
-                                </constraints>
                             </scrollView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="2MJ-71-2y4" firstAttribute="centerX" secondItem="JWO-mq-35L" secondAttribute="centerX" id="Mka-kx-y8m"/>
-                            <constraint firstItem="2MJ-71-2y4" firstAttribute="centerY" secondItem="JWO-mq-35L" secondAttribute="centerY" id="vMF-U0-sma"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2MJ-71-2y4" secondAttribute="trailing" constant="-20" id="EHA-eA-bVp"/>
+                            <constraint firstItem="2MJ-71-2y4" firstAttribute="top" secondItem="JWO-mq-35L" secondAttribute="topMargin" id="VJB-1H-cIw"/>
+                            <constraint firstItem="2MJ-71-2y4" firstAttribute="leading" secondItem="JWO-mq-35L" secondAttribute="leadingMargin" constant="-20" id="W41-7w-Uyo"/>
+                            <constraint firstItem="XrO-We-0nO" firstAttribute="top" secondItem="2MJ-71-2y4" secondAttribute="bottom" id="plz-xi-rve"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="2MJ-71-2y4" id="Lw9-6G-44H"/>
+                        <outlet property="scrollView" destination="2MJ-71-2y4" id="Key-lz-PVp"/>
                         <segue destination="7tw-7J-1hu" kind="presentation" identifier="editedImage" id="US4-bv-5Ku"/>
                     </connections>
                 </viewController>
@@ -103,7 +103,7 @@
         <!--Edited Image View Controller-->
         <scene sceneID="41r-EU-SkK">
             <objects>
-                <viewController id="7tw-7J-1hu" customClass="EditedImageViewController" customModule="CarbonVisualizer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="7tw-7J-1hu" customClass="EditedImageViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jc5-Sj-PtJ"/>
                         <viewControllerLayoutGuide type="bottom" id="Th9-7S-k1Q"/>
