--- a/CarbonVisualizer/Base.lproj/Main.storyboard
+++ b/CarbonVisualizer/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kPz-fc-jkc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kQC-t8-k2Y">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -75,24 +74,10 @@
                     <view key="view" contentMode="scaleToFill" id="JWO-mq-35L">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="2MJ-71-2y4">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <animations/>
-                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="deviceRGB"/>
-                            </scrollView>
-                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="2MJ-71-2y4" secondAttribute="trailing" constant="-20" id="EHA-eA-bVp"/>
-                            <constraint firstItem="2MJ-71-2y4" firstAttribute="top" secondItem="JWO-mq-35L" secondAttribute="topMargin" id="VJB-1H-cIw"/>
-                            <constraint firstItem="2MJ-71-2y4" firstAttribute="leading" secondItem="JWO-mq-35L" secondAttribute="leadingMargin" constant="-20" id="W41-7w-Uyo"/>
-                            <constraint firstItem="XrO-We-0nO" firstAttribute="top" secondItem="2MJ-71-2y4" secondAttribute="bottom" id="plz-xi-rve"/>
-                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="2MJ-71-2y4" id="Key-lz-PVp"/>
                         <segue destination="7tw-7J-1hu" kind="presentation" identifier="editedImage" id="US4-bv-5Ku"/>
                     </connections>
                 </viewController>
@@ -117,7 +102,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x9p-05-ei1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1664" y="375"/>
+            <point key="canvasLocation" x="1700" y="375"/>
         </scene>
         <!--Example View Controller-->
         <scene sceneID="JJe-Xq-tsQ">
