--- a/CarbonVisualizer/Base.lproj/Main.storyboard
+++ b/CarbonVisualizer/Base.lproj/Main.storyboard
@@ -3,12 +3,55 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
+        <scene sceneID="Mci-41-Guz">
+            <objects>
+                <viewController id="Ybc-NP-Ytv" customClass="MainViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="U4I-He-h8P"/>
+                        <viewControllerLayoutGuide type="bottom" id="lkd-r8-Dfc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="auL-oe-SEp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Fashion App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HII-vx-GbL">
+                                <rect key="frame" x="20" y="61" width="300" height="77"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="77" id="IPF-5x-IQ0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxv-Yz-grK">
+                                <rect key="frame" x="275" y="285" width="46" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Nxv-Yz-grK" firstAttribute="centerY" secondItem="auL-oe-SEp" secondAttribute="centerY" id="Maq-W3-5U0"/>
+                            <constraint firstItem="Nxv-Yz-grK" firstAttribute="leading" secondItem="auL-oe-SEp" secondAttribute="leading" constant="275" id="We8-zm-Fdk"/>
+                            <constraint firstItem="HII-vx-GbL" firstAttribute="top" secondItem="U4I-He-h8P" secondAttribute="bottom" constant="41" id="jZb-mr-Ven"/>
+                            <constraint firstItem="HII-vx-GbL" firstAttribute="leading" secondItem="auL-oe-SEp" secondAttribute="leadingMargin" id="tAE-S2-rtf"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="urO-jV-iRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="190" y="1011"/>
+        </scene>
+        <!--Case Model View Controller-->
         <scene sceneID="6dn-lU-jk7">
             <objects>
-                <viewController id="kQC-t8-k2Y" customClass="ViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="kQC-t8-k2Y" customClass="CaseModelViewController" customModule="PhoneFashionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hYx-gu-9hy"/>
                         <viewControllerLayoutGuide type="bottom" id="770-eV-Tev"/>
@@ -61,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HCr-kA-UFr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301" y="372"/>
+            <point key="canvasLocation" x="190" y="352"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="7cY-wt-obZ">
