--- a/CarbonVisualizer/Base.lproj/Main.storyboard
+++ b/CarbonVisualizer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jsW-et-DJE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ybc-NP-Ytv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -135,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HbH-3s-U7Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="978" y="122"/>
+            <point key="canvasLocation" x="984" y="86"/>
         </scene>
         <!--Image View Controller-->
         <scene sceneID="6Xq-pQ-5H7">
@@ -151,7 +151,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="eCe-Qj-JYx" kind="presentation" identifier="segueCase" id="bGn-44-Als"/>
+                        <segue destination="eCe-Qj-JYx" kind="presentation" identifier="previewCaseSegue" id="bGn-44-Als"/>
                         <segue destination="7tw-7J-1hu" kind="presentation" identifier="editedImageTwo" id="XtL-SI-9em"/>
                     </connections>
                 </viewController>
@@ -408,7 +408,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
             </objects>
-            <point key="canvasLocation" x="3540" y="10"/>
+            <point key="canvasLocation" x="4496" y="1046"/>
         </scene>
         <!--Please check your details-->
         <scene sceneID="m7E-5r-8R6">
@@ -431,6 +431,9 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NyC-2g-PQc">
                                 <rect key="frame" x="236" y="402" width="139" height="30"/>
                                 <state key="normal" title="Proceed to Payment"/>
+                                <connections>
+                                    <action selector="proceedToPayment:" destination="wcy-hr-2sS" eventType="touchUpInside" id="lE3-Ym-n7D"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oky-M9-UxU">
                                 <rect key="frame" x="114" y="189" width="228" height="38"/>
@@ -450,11 +453,13 @@
                     </navigationItem>
                     <connections>
                         <outlet property="countryLabel" destination="oky-M9-UxU" id="EPi-t5-CPV"/>
+                        <segue destination="87u-i6-hh1" kind="unwind" identifier="unwindSegue" unwindAction="unwindToHome:" id="yzO-eH-Zjw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TbT-qq-MEA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="87u-i6-hh1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="5113" y="10"/>
+            <point key="canvasLocation" x="6369" y="1046"/>
         </scene>
         <!--3D Case Preview-->
         <scene sceneID="ga4-mt-dGQ">
@@ -493,6 +498,7 @@
                                 <state key="normal" title="Order"/>
                                 <connections>
                                     <action selector="order:" destination="f2U-y8-njl" eventType="touchUpInside" id="o8F-KY-G5e"/>
+                                    <segue destination="jsW-et-DJE" kind="show" identifier="orderSegue" id="Gar-xn-RH2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -561,7 +567,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BNc-yL-bE8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2789" y="2"/>
+            <point key="canvasLocation" x="3497" y="1046"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mlE-Jt-nkt">
@@ -579,10 +585,10 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GwF-6q-krj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4301" y="10"/>
+            <point key="canvasLocation" x="5465" y="1046"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="US4-bv-5Ku"/>
+        <segue reference="XtL-SI-9em"/>
     </inferredMetricsTieBreakers>
 </document>
